src/components/video/card/videoCollectionButton/manage-video-collection-button.less
@import '../../../../../resources/styles/_antd-theme.less';

.manage-video-collection-button {
  &__loading-collections {
    font-size: 40px;
    color: @primary-color !important;
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 20px;
  }

  &__popover {
    max-width: 415px;

    .ant-popover-inner-content {
      padding: 0;
    }

    .ant-popover-title {
      border-bottom: 0 !important;
    }
  }

  &__drawer {
    .ant-menu-vertical {
      border-right: 0;
    }
    .ant-drawer-body {
      padding: 0;
    }
  }

  &__menu-container {
    max-height: 200px;
    overflow-x: hidden;
    overflow-y: scroll;
    border-right: 0px !important;

    .ant-menu-item-selected {
      background-color: inherit !important;
    }

    &,
    .ant-checkbox-wrapper {
      color: @primary-color !important;
    }
  }

  &__menu-item {
    min-width: 400px;
    display: inline-block;
  }

  &__create-collection {
    font-weight: bold;
  }

  &__collection-entry {
    display: inline-block;
    text-overflow: ellipsis;
  }

  &__title-input {
    width: calc(100% - 88px) !important;
    margin-right: 10px !important;
  }

  &__create-collection-button {
    min-width: 60px !important;
  }
}

